--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-spring.application.name=ms-beer-gateway
+spring.application.name=ms-beerGateway
 server.port=9090
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+logging.level.org.springframework.cloud.gateway=debug
